<resources>
    <string name="app_name">Consultpin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="your_email">Email</string>
    <string name="password">password</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="sign_in">Login</string>
    <string name="register_free">Register for free</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone</string>
    <string name="con_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logout_text">Are you sure want to logout ?</string>
    <string name="become_consultant">Become a consultant</string>
    <string name="search">Search Consultant or Category</string>
    <string name="papular_cat">Popular Categories</string>
    <string name="papular_cat_new">New Categories</string>
    <string name="papular_consultant">Popular Consultant</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="appointment">Appointments</string>
    <string name="becom_consultant">Become a Consultant</string>
    <string name="account_info">Account Information</string>
    <string name="Favorites">Favorites</string>
    <string name="pinpara_wallet">PinPara Wallet</string>
    <string name="appointments">Appointments</string>
    <string name="appointment_history">Appointmenst History</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="Logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="mobile_number">Mobile</string>
    <string name="enteryouremail">Please enter your registered email</string>
    <string name="next_continue">Continue</string>
    <string name="Required">Consultpin</string>
    <string name="Invalid">Invalid</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_old_password">Enter old Password</string>
    <string name="enter_conf_password">Enter Confirm Password</string>
    <string name="password_invalid">Confirm Password does not matched</string>
    <string name="ok">Ok</string>
    <string name="entervalidemail">Enter valid Email.</string>
    <string name="enter_firstname">Enter First Name.</string>
    <string name="enter_lastname">Enter Last Name.</string>
    <string name="enter_national_idnumber">Enter National Identity Number.</string>
    <string name="enter_email">Enter Email Address.</string>
    <string name="enter_mobilenumber">Enter Mobile Number</string>
    <string name="enter_valid_mobilenumber">Enter Valid Mobile Number</string>
    <string name="select_term_condition">Select Terms and Conditions</string>
    <string name="Response">Consultpin</string>
    <string name="enter_otp">OTP</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="next">Next</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_new_password">Please enter your new password</string>
    <string name="change">Change</string>
    <string name="invalidOtp">Entered OTP is invalid</string>
    <string name="username">Username</string>
    <string name="profile_enable">Profile Enable</string>
    <string name="your_professional_background">Your professional background</string>
    <string name="Specialties">Specialties</string>
    <string name="fee">Fees</string>
    <string name="setappointment">Set Appointments</string>
    <string name="event_request">Event Request</string>
    <string name="how_would_you_describe">How would you describe yours</string>
    <string name="example">Ex: Criminal Law Attorney</string>
    <string name="yourprofessionalbackg">Your professional background</string>
    <string name="takabout">Talk about your knowledge and experience</string>
    <string name="takabout_exp">Talk about your speciality </string>
    <string name="verified_consultant_msg">Using the select file button you can send diploma, bar association registration etc. by sending these of kind documents. You can be a Verified Consultant.</string>
    <string name="verified_consultant">Verified Consultant</string>
    <string name="what_is_verified_consultant">What is Verified Consultant?</string>
    <string name="lawer_licence">Lawyer_licence.jpg</string>
    <string name="category_selection">Category Selection</string>
    <string name="select_category">Select Category</string>
    <string name="select_subcategory">Select Sub Category</string>
    <string name="select_price_tl">Enter Price (TL / Hour)</string>
    <string name="select_buisness">Select your buisness</string>
    <string name="nationidproof">National Identity Number</string>
    <string name="city">City</string>
    <string name="Provience">Provience</string>
    <string name="postaladdress">Postal Address</string>
    <string name="select_your_bank">Select Your Bank</string>
    <string name="iban">IBAN</string>
    <string name="enter_iban">Enter IBAN Number</string>
    <string name="select_terms">Please select terms and condition</string>
    <string name="consultant_terms">Gizlilik Politikamız, Ödeme Platformları Kullanım Sözleşmesi, Açık Rıza Metni (KVKK)</string>
    <string name="send">send</string>
    <string name="waring_describe">Describe your self</string>
    <string name="ed_taskmoreabout">Talk about yourself</string>
    <string name="ed_specialist">Enter your specialaity </string>
    <string name="select_any_two">Select any two </string>
    <string name="select_any_one">Select any one </string>
    <string name="category_count">Sub Category count could not be more than two. </string>
    <string name="done">Done</string>
    <string name="enter_cityname">Enter city name</string>
    <string name="enter_provience">Enter provience name</string>
    <string name="ed_postal_Address">Enter postal code</string>
    <string name="success">Success!</string>
    <string name="account_added">Account added Sucessfully </string>
    <string name="companyname">Company name </string>
    <string name="entercompanyname">Enter company name </string>
    <string name="tax_office">Tax Office</string>
    <string name="enter_tax_office">Enter tax Office</string>
    <string name="tc_number">TC Identity Number</string>
    <string name="enter_tc_number">Enter Tc Number</string>
    <string name="datefrom">Date From</string>
    <string name="dateend">Date To</string>
    <string name="isweekend_off">Weekends and holidays are Included</string>
    <string name="create_your_own_time">Create your own time</string>
    <string name="str_name">Name</string>
    <string name="Profession">Profession</string>
    <string name="update">Update</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="enter_proffessional_bg">Enter professional background</string>
    <string name="enter_speciality">Enter your speciality </string>
    <string name="enter_fee">Enter your fee </string>
    <string name="lirasymbol">₺</string>
    <string name="set_appointment">Appointment Request</string>
    <string name="consultant">Consultant</string>
    <string name="write_information">write information about event ...</string>
    <string name="about_the_event">About the event</string>
    <string name="event_date">Event start date</string>
    <string name="event_end_date">Event end date</string>
    <string name="event_time">Event time</string>
    <string name="saveAppointment">Save</string>
    <string name="timing">Timing</string>
    <string name="event_category">Event Category</string>
    <string name="paid">Paid</string>
    <string name="event_start_time">Event start time</string>
    <string name="event_end_time">Event end time</string>
    <string name="numberofparticipaint">Number of participants</string>
    <string name="imagetitle">The image you want to use for the event</string>
    <string name="imagelimit">The image you will submit is 400x400px to1000x1000px in the range and should not exceed 5mb</string>
    <string name="event">Add a event</string>
    <string name="events">Event</string>
    <string name="sendrequest">Send Request</string>
    <string name="selecttime">Select your appointment time.</string>
    <string name="wouldyouliketosave">Save this time slot before to go next.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action">Action</string>
    <string name="videochat">Video Call</string>
    <string name="appointment_duration">Appointment Duration</string>
    <string name="appointment_dur_des">The duration of your meeting with our consultant</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="appointment_request">Appointment Request</string>
    <string name="appointment_request_edit">Save/Edit</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="Completed">Completed</string>
    <string name="Approved">Approved</string>
    <string name="Rejected">Rejected</string>
    <string name="Cancelled">Cancelled</string>
    <string name="pending">Pending</string>
    <string name="startVideoCall">Start Video Call</string>
    <string name="add_comment">Add Comment</string>
    <string name="add_comment_msg">Enter brief description</string>
    <string name="select_time_inter">Select duration of meeting</string>
    <string name="select_time">Select appointment time</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_appointment">Would you like to cancel this appointment.</string>
    <string name="accept_confirmation">Would you like to Accept this appointment ?</string>
    <string name="reject_confirmation">Would you like to Reject this appointment ?</string>
    <string name="selectvalidTimepair">Please select appointment end time</string>
    <string name="enter_event_detail">Enter event details</string>
    <string name="numberofdays">Enter event days</string>
    <string name="enter_event_fee">Enter event fee</string>
    <string name="choose">Choose</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="chooseimage">Choose time</string>
    <string name="selecteventtime">Select event time.</string>
    <string name="img_sel_msg">"Choose Image either from camera or from gallary?</string>
    <string name="select_licence_image">Select license Image.</string>
    <string name="event_image">Event Image.</string>
    <string name="switchtouser">Switch to user</string>
    <string name="switchtoconsultant">Switch to consultant</string>
    <string name="brifeabout_appointment">Briefly mention your needs and concerns so that our consultant provides you with a better quality service</string>
    <string name="category_selection_msg">The category you selected during the verification process can be checked by us and changed to a more suitable category</string>
</resources>