<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/profile_background"
    tools:context=".ui.home.Chat">


    <include layout="@layout/tootlbar_with_back_button"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <fontspackageForTextView.BoldMedium
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/edittext_style_14_black"
                android:text="@string/brifeabout_appointment"
                >
            </fontspackageForTextView.BoldMedium>


            <fontpackageforEdittext.Regular
                android:id="@+id/ed_description"
                style="@style/edittext_style_14_black"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundcorner_drawable"
                android:gravity="left|top"
                android:hint="@string/add_comment"
                android:padding="5dp"

                ></fontpackageforEdittext.Regular>

            <fontspackageForTextView.BoldMedium
                android:layout_marginTop="19dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                style="@style/edittext_style_14_black"
                android:text="@string/appointment_duration"
                ></fontspackageForTextView.BoldMedium>


            <fontspackageForTextView.BoldMedium

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                style="@style/edittext_style_12_grey"
                android:text="@string/appointment_dur_des"
                ></fontspackageForTextView.BoldMedium>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/recyclerview_timeslot"
                >
            </androidx.recyclerview.widget.RecyclerView>




            <fontspackageForTextView.BoldMedium
                android:layout_marginTop="19dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/edittext_style_14_black"
                android:text="@string/appointment_date"
                >
            </fontspackageForTextView.BoldMedium>

            <CalendarView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date_cal_view"
                ></CalendarView>

            <fontspackageForTextView.BoldMedium
                android:translationY="-30dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/edittext_style_14_black"
                android:text="@string/appointment_time"
                >
            </fontspackageForTextView.BoldMedium>

            <LinearLayout
                android:translationY="-30dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                >
            <include layout="@layout/no_data_found"/>
            <GridView
                android:id="@+id/grid_timing"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:horizontalSpacing="5dp"
                android:nestedScrollingEnabled="true"
                android:numColumns="4"
                android:scrollbarThumbVertical="@android:color/transparent"
                android:stretchMode="columnWidth"
                android:verticalSpacing="5dp"></GridView>
            </LinearLayout>


            <fontspackageForTextView.Regular
                android:id="@+id/tv_saveAppointment"
                android:background="@drawable/drawable_button_skyblue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/appointment_request" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>